--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,13 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>RELEASE</version>
 		</dependency>
-		
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>RELEASE</version>
-		</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+	<dependency>
+		<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-validator</artifactId>
+		<version>5.4.0.Final</version>
+	</dependency>
 		
 		<!-- Weld - CDI -->
 		
@@ -55,7 +56,15 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 			<version>RELEASE</version>
-		</dependency> 
+		</dependency>
+
+	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+	<dependency>
+		<groupId>com.fasterxml.jackson.core</groupId>
+		<artifactId>jackson-annotations</artifactId>
+		<version>2.8.7</version>
+	</dependency>
+		
 		
 		
 		<!-- Gson -->
